# rust-booking-app

./: .gitignore  Cargo.toml  README.md  SPEC.md
src/: main.rs
src/models/: mod.rs
src/services/: mod.rs
src/services/booking/: mod.rs
src/services/patient/: mod.rs
