[package]
name = "rust-booking-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { varsion = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"]}
